--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "5.20.0",
+    "fast-xml-parser": "^4.5.0",
     "puppeteer": "^23.4.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
